--- a/htm/barratopo.htm
+++ b/htm/barratopo.htm
@@ -35,14 +35,14 @@ NomeCliente='NomeCliente';
   <br><br>
 
   <script>
-   if(""!="NomeCliente")
+   if(""!=NomeCliente)
     {document.write("<a onclick='closeNav()'>Ol&aacute;, NomeCliente</a>")}
    else
     {document.write("<a onclick='closeNav()'>Ol&aacute;, visitante!</a>")}
   </script>
 
   <script>
-   if(""=="NomeCliente")
+   if(""==NomeCliente)
     {document.write("<a onclick='closeNav()' href='/cadastro.asp?idloja=<IDLojaNum>&pp=3&passo=1&sit=1'><span class='glyphicon glyphicon-log-in' aria-hidden='true'>&nbsp;</span>Login ou Cadastro </a>")}
   </script>
 
@@ -60,7 +60,7 @@ NomeCliente='NomeCliente';
   <a onclick="closeNav()" href="/buscaavancada.asp?idloja=<IDLojaNum>"><span class="glyphicon glyphicon-search" aria-hidden="true">&nbsp;</span> Busca detalhada</a>
               
   <script>
-   if(""!="NomeCliente")
+   if(""!=NomeCliente)
     {document.write("<a onclick='closeNav()' href='cadastro.asp?IDLoja=<IDLoja>&pp=3&logoff=1'><span class='glyphicon glyphicon-log-out' aria-hidden='true'>&nbsp;</span>Sair</a>")}
   </script>
 
@@ -120,14 +120,14 @@ NomeCliente='NomeCliente';
 
           <li class="dropdown">
             <script>
-             if(""!="NomeCliente")
+             if(""!=NomeCliente)
               {document.write("<a class='dropbtn'>OL&Aacute;, NomeCliente <span class='caret'></span></a>")}
              else
               {document.write("<a class='dropbtn' target='_top'>OL&Aacute;, visitante! <span class='caret'></span></a>")}
             </script>
             <div class="dropdown-content linear-grad">
               <script>
-               if(""=="NomeCliente")
+               if(""==NomeCliente)
                 {document.write("<a href='/cadastro.asp?idloja=<IDLojaNum>&pp=3&passo=1&sit=1'><span class='glyphicon glyphicon-log-in' aria-hidden='true'></span> Login ou Cadastro</a>")}
               </script>
 
@@ -140,7 +140,7 @@ NomeCliente='NomeCliente';
 
               <a href="/addProduto.asp?idloja=<IDLojaNum>"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> Itens: <QtdCesta></a>
               <script>
-               if(""!="NomeCliente")
+               if(""!=NomeCliente)
                 {document.write("<a href='cadastro.asp?IDLoja=<IDLoja>&pp=3&logoff=1' target='_top'><span class='glyphicon glyphicon-log-out' aria-hidden='true'></span> Sair</a>")}
               </script>
             </div>
