--- a/htm/barratopo.htm
+++ b/htm/barratopo.htm
@@ -3,7 +3,7 @@
 <script type="text/javascript">
 IDLoja='<IDLoja>'; //Obtém IDLoja para montar links
 IDLojaNum='<IDLojaNum>';
-NomeCliente='NomeCliente';
+NomeCliente='<NomeCliente>';
 </script>
 
 <script>FCLib$.loadAsyncCSS('<PathTo file="htm/css/style.css">');</script>
