--- a/htm/barratopo.htm
+++ b/htm/barratopo.htm
@@ -36,7 +36,7 @@ NomeCliente='<NomeCliente>';
 
   <script>
    if(""!=NomeCliente)
-    {document.write("<a onclick='closeNav()'>Ol&aacute;, NomeCliente</a>")}
+    {document.write("<a onclick='closeNav()'>Ol&aacute;, <NomeCliente></a>")}
    else
     {document.write("<a onclick='closeNav()'>Ol&aacute;, visitante!</a>")}
   </script>
@@ -121,7 +121,7 @@ NomeCliente='<NomeCliente>';
           <li class="dropdown">
             <script>
              if(""!=NomeCliente)
-              {document.write("<a class='dropbtn'>OL&Aacute;, NomeCliente <span class='caret'></span></a>")}
+              {document.write("<a class='dropbtn'>OL&Aacute;, <NomeCliente> <span class='caret'></span></a>")}
              else
               {document.write("<a class='dropbtn' target='_top'>OL&Aacute;, visitante! <span class='caret'></span></a>")}
             </script>
