ajuste nas descrições

--- a/htm/home.htm
+++ b/htm/home.htm
@@ -284,7 +284,7 @@
                   <li>Borda de 2.5D e 3D</li>
                   <li>Dispon&iacute;vel para iPhone 5, 5s, SE, 6, 6s, 6s Plus, 7 e 7 Plus</li>
                   <li>Acompanha kit para limpeza/instala&ccedil;&atilde;o</li>
-                  <li>Motomo, Mocolo e muito mais</li>
+                  <li>Mocolo e muito mais</li>
                 </ul>
               </div><hr/>
               <a href="https://www.tuning-phone.com.br/c/peliculas-56515139" type="button" class="btn btn-warning"><i class="fa fa-shopping-cart fa-2x" aria-hidden="true">&nbsp;Eu quero!</i></a>
