--- a/htm/barratopo.htm
+++ b/htm/barratopo.htm
@@ -35,15 +35,13 @@ NomeCliente='<NomeCliente>';
   <br><br>
 
   <script>
-   if(""!=NomeCliente)
-    {document.write("<a onclick='closeNav()'>Ol&aacute;, <NomeCliente></a>")}
+   if(""!=NomeCliente){document.write("<a onclick='closeNav()'>Ol&aacute;, <NomeCliente></a>")}
    else
     {document.write("<a onclick='closeNav()'>Ol&aacute;, visitante!</a>")}
   </script>
 
   <script>
-   if(""==NomeCliente)
-    {document.write("<a onclick='closeNav()' href='/cadastro.asp?idloja=<IDLojaNum>&pp=3&passo=1&sit=1'><span class='glyphicon glyphicon-log-in' aria-hidden='true'>&nbsp;</span>Login ou Cadastro </a>")}
+   if(""==NomeCliente){document.write("<a onclick='closeNav()' href='/cadastro.asp?idloja=<IDLojaNum>&pp=3&passo=1&sit=1'><span class='glyphicon glyphicon-log-in' aria-hidden='true'>&nbsp;</span>Login ou Cadastro </a>")}
   </script>
 
   <a onclick="closeNav()" href="<StoreDomain>"><span class="glyphicon glyphicon-home" aria-hidden="true">&nbsp;</span>Home</a>
@@ -60,8 +58,7 @@ NomeCliente='<NomeCliente>';
   <a onclick="closeNav()" href="/buscaavancada.asp?idloja=<IDLojaNum>"><span class="glyphicon glyphicon-search" aria-hidden="true">&nbsp;</span> Busca detalhada</a>
               
   <script>
-   if(""!=NomeCliente)
-    {document.write("<a onclick='closeNav()' href='cadastro.asp?IDLoja=<IDLoja>&pp=3&logoff=1'><span class='glyphicon glyphicon-log-out' aria-hidden='true'>&nbsp;</span>Sair</a>")}
+   if(""!=NomeCliente){document.write("<a onclick='closeNav()' href='cadastro.asp?IDLoja=<IDLoja>&pp=3&logoff=1'><span class='glyphicon glyphicon-log-out' aria-hidden='true'>&nbsp;</span>Sair</a>")}
   </script>
 
   <hr>
@@ -120,15 +117,12 @@ NomeCliente='<NomeCliente>';
 
           <li class="dropdown">
             <script>
-             if(""!=NomeCliente)
-              {document.write("<a class='dropbtn'>OL&Aacute;, <NomeCliente> <span class='caret'></span></a>")}
-             else
-              {document.write("<a class='dropbtn' target='_top'>OL&Aacute;, visitante! <span class='caret'></span></a>")}
+             if(""!=NomeCliente){document.write("<a class='dropbtn'>OL&Aacute;, <NomeCliente> <span class='caret'></span></a>")}
+             else{document.write("<a class='dropbtn' target='_top'>OL&Aacute;, visitante! <span class='caret'></span></a>")}
             </script>
             <div class="dropdown-content linear-grad">
               <script>
-               if(""==NomeCliente)
-                {document.write("<a href='/cadastro.asp?idloja=<IDLojaNum>&pp=3&passo=1&sit=1'><span class='glyphicon glyphicon-log-in' aria-hidden='true'></span> Login ou Cadastro</a>")}
+               if(""==NomeCliente){document.write("<a href='/cadastro.asp?idloja=<IDLojaNum>&pp=3&passo=1&sit=1'><span class='glyphicon glyphicon-log-in' aria-hidden='true'></span> Login ou Cadastro</a>")}
               </script>
 
               <a href="/account.asp?idloja=<IDLojaNum>"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> Meus Dados</a>
@@ -140,8 +134,7 @@ NomeCliente='<NomeCliente>';
 
               <a href="/addProduto.asp?idloja=<IDLojaNum>"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> Itens: <QtdCesta></a>
               <script>
-               if(""!=NomeCliente)
-                {document.write("<a href='cadastro.asp?IDLoja=<IDLoja>&pp=3&logoff=1' target='_top'><span class='glyphicon glyphicon-log-out' aria-hidden='true'></span> Sair</a>")}
+               if(""!=NomeCliente){document.write("<a href='cadastro.asp?IDLoja=<IDLoja>&pp=3&logoff=1' target='_top'><span class='glyphicon glyphicon-log-out' aria-hidden='true'></span> Sair</a>")}
               </script>
             </div>
           </li>
